updates phd thesis slides

--- a/index.html
+++ b/index.html
@@ -895,8 +895,8 @@
 														data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/papers/resende_www2019_whatsapp.pdf"
-														target="_blank">
+												<li class="list-inline-item"><a
+														href="pdf/papers/resende_www2019_whatsapp.pdf" target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
 												<li class="list-inline-item"><a href="bibtex/resende_www_2019.bib"
@@ -951,8 +951,8 @@
 														data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/papers/melo-icwsm-2019-demo.pdf"
-														target="_blank">
+												<li class="list-inline-item"><a
+														href="pdf/papers/melo-icwsm-2019-demo.pdf" target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
 												<li class="list-inline-item"><a
@@ -1091,8 +1091,8 @@
 														data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/papers/ribeiro_fat19_ira_ads.pdf"
-														target="_blank">
+												<li class="list-inline-item"><a
+														href="pdf/papers/ribeiro_fat19_ira_ads.pdf" target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
 												<li class="list-inline-item"><a href="bibtex/ribeiro_fat_2019.bib"
@@ -1159,8 +1159,8 @@
 														data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/papers/messias_wi17_inequality.pdf"
-														target="_blank">
+												<li class="list-inline-item"><a
+														href="pdf/papers/messias_wi17_inequality.pdf" target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
 												<li class="list-inline-item"><a href="bibtex/messias_wi_2017.bib"
@@ -1210,8 +1210,8 @@
 														data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/papers/reis_ht17_news-sharing.pdf"
-														target="_blank">
+												<li class="list-inline-item"><a
+														href="pdf/papers/reis_ht17_news-sharing.pdf" target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
 												<li class="list-inline-item"><a href="bibtex/reis_ht_2017.bib"
@@ -1686,8 +1686,8 @@
 												<li class="list-inline-item"><a href="#mobile" data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/papers/messias_asonam16_mobile.pdf"
-														target="_blank">
+												<li class="list-inline-item"><a
+														href="pdf/papers/messias_asonam16_mobile.pdf" target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
 												<li class="list-inline-item"><a
@@ -2055,8 +2055,8 @@
 												<li class="list-inline-item"><a href="#bazinga" data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/papers/goncalves_brasnam15.pdf"
-														target="_blank">
+												<li class="list-inline-item"><a
+														href="pdf/papers/goncalves_brasnam15.pdf" target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
 
