Fixed broken links

--- a/index.html
+++ b/index.html
@@ -390,7 +390,8 @@
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
 												<li class="list-inline-item"><a
-														href="pdf/messias_caaw25_inscriptions.pdf" target="_blank">
+														href="pdf/papers/messias_caaw25_inscriptions.pdf"
+														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
 												<li class="list-inline-item"><a
@@ -444,7 +445,7 @@
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
 												<li class="list-inline-item"><a
-														href="pdf/silva_and_messias_caaw25_zksync_data.pdf"
+														href="pdf/papers/silva_and_messias_caaw25_zksync_data.pdf"
 														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
@@ -494,7 +495,8 @@
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
 												<li class="list-inline-item"><a
-														href="pdf/gogol-liquid-staking-marble24.pdf" target="_blank">
+														href="pdf/papers/gogol-liquid-staking-marble24.pdf"
+														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
 												<li class="list-inline-item"><a
@@ -653,7 +655,7 @@
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
 												<li class="list-inline-item"><a
-														href="pdf/messias-fc23-transaction-prioritization.pdf"
+														href="pdf/papers/messias-fc23-transaction-prioritization.pdf"
 														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
@@ -722,7 +724,8 @@
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
 												<li class="list-inline-item"><a
-														href="pdf/messias_imc2021_btc_tx_ordering.pdf" target="_blank">
+														href="pdf/papers/messias_imc2021_btc_tx_ordering.pdf"
+														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
 												<li class="list-inline-item"><a
@@ -1260,7 +1263,7 @@
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
 												<li class="list-inline-item"><a
-														href="pdf/vikatos_ht17_linguistic-diversity.pdf"
+														href="pdf/papers/vikatos_ht17_linguistic-diversity.pdf"
 														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
@@ -1318,7 +1321,7 @@
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
 												<li class="list-inline-item"><a
-														href="pdf/chakraborty_icwsm17_who_makes_trends.pdf"
+														href="pdf/papers/chakraborty_icwsm17_who_makes_trends.pdf"
 														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
@@ -1551,7 +1554,8 @@
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
 												<li class="list-inline-item"><a
-														href="pdf/kulshrestha_cscw17_search_bias.pdf" target="_blank">
+														href="pdf/papers/kulshrestha_cscw17_search_bias.pdf"
+														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
 												<li class="list-inline-item"><a href="bibtex/juhi_cscw_2017.bib"
@@ -1615,7 +1619,8 @@
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
 												<li class="list-inline-item"><a
-														href="pdf/messias_asonam16_migration.pdf" target="_blank">
+														href="pdf/papers/messias_asonam16_migration.pdf"
+														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
 												<li class="list-inline-item"><a
@@ -1907,7 +1912,8 @@
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
 												<li class="list-inline-item"><a
-														href="pdf/resende_webmedia2018_whatsapp.pdf" target="_blank">
+														href="pdf/papers/resende_webmedia2018_whatsapp.pdf"
+														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
 												<li class="list-inline-item"><a
@@ -2201,9 +2207,14 @@
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
 												<li class="list-inline-item"><a
-														href="./pdf/phd-thesis_johnnatan_messias.pdf" target="_blank">
+														href="./pdf/papers/phd-thesis_johnnatan_messias.pdf"
+														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
+												<li class="list-inline-item"><a href="pdf/slides/phd-thesis-defense.pdf"
+														target="_blank">
+														<span class="badge badge-warning badge-pill">Slides</span>
+													</a></li>
 											</ul>
 											</li>
 											<div id="phd-thesis" class="collapse">
@@ -2253,7 +2264,7 @@
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
 												<li class="list-inline-item"><a
-														href="./pdf/master-thesis_johnnatan_messias.pdf"
+														href="./pdf/papers/master-thesis_johnnatan_messias.pdf"
 														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
@@ -2318,7 +2329,8 @@
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
 												<li class="list-inline-item"><a
-														href="./pdf/mono_johnnatan_messias-15.pdf" target="_blank">
+														href="./pdf/papers/mono_johnnatan_messias-15.pdf"
+														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
 											</ul>
@@ -2552,7 +2564,8 @@
 
 
 
-								<li>The paper <a href="pdf/gogol-liquid-staking-marble24.pdf">Liquid Staking Tokens in
+								<li>The paper <a href="pdf/papers/gogol-liquid-staking-marble24.pdf">Liquid Staking
+										Tokens in
 										Automated Market Makers</a> received the
 									<a href="pdf/award/MARBLE2024_Best_paper_award.pdf">best paper award</a> from MARBLE
 									2024.
