--- a/index.html
+++ b/index.html
@@ -45,7 +45,32 @@
 </head>
 
 <body>
-
+<!-- Navigation Bar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+	<div class="container">
+	  <a class="navbar-brand" href="#">Dr. Johnnatan Messias</a>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+		aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarNav">
+		<ul class="navbar-nav ml-auto">
+		  <li class="nav-item">
+			<a class="nav-link" href="#about-me">About Me</a>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="#publications">Publications</a>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="pdf/resume_eng_johnnatan_messias.pdf" target="_blank">CV</a>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="https://scholar.google.com/citations?user=EoGEeFAAAAAJ" target="_blank">Google Scholar</a>
+		  </li>
+		</ul>
+	  </div>
+	</div>
+  </nav>
 	<script>
 		var names = {
 			"johnnatan_messias": ["<strong>Johnnatan Messias</strong>", "http://johnnatan-messias.github.io"],
@@ -184,7 +209,7 @@
 				<!--//media-->
 			</header>
 			<div class="resume-body p-5">
-				<section class="resume-section summary-section mb-5">
+				<section class="resume-section summary-section mb-5" id="about-me">
 					<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">About me</h2>
 					<div class="resume-section-content">
 						<p class="mb-0">
@@ -234,7 +259,7 @@
 				<!--//summary-section-->
 				<div class="row">
 					<div class="col-lg-9">
-						<section class="resume-section experience-section mb-5">
+						<section class="resume-section experience-section mb-5" id="publications">
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Selected
 								Works and Publications
 							</h2>
