Scroll through the page

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 
 	<!-- Theme CSS -->
 	<link id="theme-style" rel="stylesheet" href="assets/css/pillar-2.css">
+	<style>
+		html {
+		  scroll-behavior: smooth;
+		}
+	  </style>
 
 
 </head>
