Added more sections to the navbar

--- a/index.html
+++ b/index.html
@@ -42,40 +42,50 @@
 	<link id="theme-style" rel="stylesheet" href="assets/css/pillar-2.css">
 	<style>
 		html {
-		  scroll-behavior: smooth;
+			scroll-behavior: smooth;
 		}
-	  </style>
+	</style>
 
 
 </head>
 
 <body>
-<!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-	<div class="container">
-	  <a class="navbar-brand" href="#">Dr. Johnnatan Messias</a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-		aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarNav">
-		<ul class="navbar-nav ml-auto">
-		  <li class="nav-item">
-			<a class="nav-link" href="#about-me">About Me</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="#publications">Publications</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="pdf/resume_eng_johnnatan_messias.pdf" target="_blank">CV</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="https://scholar.google.com/citations?user=EoGEeFAAAAAJ" target="_blank">Google Scholar</a>
-		  </li>
-		</ul>
-	  </div>
-	</div>
-  </nav>
+	<!-- Navigation Bar -->
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+		<div class="container">
+			<a class="navbar-brand" href="#">Dr. Johnnatan Messias</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="#about-me">About Me</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#publications">Publications</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#press-coverage">Press</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#awards">Awards</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#talks">Talks</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="pdf/resume_eng_johnnatan_messias.pdf" target="_blank">CV</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="https://scholar.google.com/citations?user=EoGEeFAAAAAJ"
+							target="_blank">Google Scholar</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 	<script>
 		var names = {
 			"johnnatan_messias": ["<strong>Johnnatan Messias</strong>", "http://johnnatan-messias.github.io"],
@@ -2404,7 +2414,7 @@
 
 						</section>
 						<!--//publication-section-->
-						<section class="resume-section experience-section mb-5">
+						<section class="resume-section experience-section mb-5" id="press-coverage">
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Press Coverage
 							</h2>
 
@@ -2586,7 +2596,8 @@
 
 						</section> -->
 						<section class="resume-section experience-section mb-5">
-							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Awards
+							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3" id="awards">
+								Awards
 							</h2>
 							<ul>
 
@@ -2643,7 +2654,7 @@
 						</section>
 
 
-						<section class="resume-section experience-section mb-5">
+						<section class="resume-section experience-section mb-5" id="talks">
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Talks and
 								Interviews
 							</h2>
