Update awards section

--- a/index.html
+++ b/index.html
@@ -2601,55 +2601,61 @@
 							</h2>
 							<ul>
 
-
-
-
-
-								<li>The paper <a href="pdf/papers/gogol-liquid-staking-marble24.pdf">Liquid Staking
+								<li>[2025] - I have been invited, on behalf of the Alexander von Humboldt Foundation, to
+									represent Germany at the <a
+										href="https://www.humboldt-foundation.de/vernetzen/brazilian-german-frontiers-of-science-and-technology-symposium-3">{Brazilian-German
+										BRAGFOST Symposium</a>.</li>
+								<li>[2024] - I have been invited, on behalf of the President of the Alexander von
+									Humboldt Foundation, to represent Germany at the <a
+										href="https://www.humboldt-foundation.de/en/connect/13-indo-german-frontiers-of-engineering-symposium">Indo-German
+										INDOGFOE Symposium</a>. The event brought together
+									outstanding Indian and German scientists.}</li>
+								<li>[2024] - The paper <a href="pdf/papers/gogol-liquid-staking-marble24.pdf">Liquid
+										Staking
 										Tokens in
 										Automated Market Makers</a> received the
 									<a href="pdf/award/MARBLE2024_Best_paper_award.pdf">best paper award</a> from MARBLE
 									2024.
 								</li>
-
-								<li>Successfully completed Ph.D. with <b>Magna Cum Laude</b> distinction,
+								<li>[2024] - Successfully completed Ph.D. with <b>Magna Cum Laude</b> distinction,
 									demonstrating exceptional academic excellence and rigorous research capabilities.
 								</li>
-
-
-								<li>My seminar on Blockchains and Decentralized Finance (DeFi) has been nominated for
+								<li>[2023] - My seminar on Blockchains and Decentralized Finance (DeFi) has been
+									nominated for
 									the “Busy Beaver” award – an award for outstanding and excellent lectures at the
 									Saarland University.</li>
-								<li>CISPA Summer School on Trustworthy Artificial Intelligence 2022: Part of the approx.
+								<li>[2022] - CISPA Summer School on Trustworthy Artificial Intelligence 2022: Part of
+									the approx.
 									100 students selected worldwide.</li>
-								<li>The Swiss Blockchain Winter School 2019: Received a stipend award provided to
+								<li>[2019] - The Swiss Blockchain Winter School 2019: Received a stipend award provided
+									to
 									selected students to participate in the event.</li>
-								<li>Our Kunumi’s medical auditor project was awarded as Brazil’s most innovative health
+								<li>[2019] - Our Kunumi’s medical auditor project was awarded as Brazil’s most
+									innovative health
 									software in 2019 according to IT Forum 365, promoted by PwC and ITMidia.</li>
-								<li>Granted a scholarship in 2013 for academic excellence to study in a European
-									university for 14 months.</li>
-								<li>Research Grant during my M.Sc. by the Brazilian National Council for Scientific and
+								<li>[2015] - Research Grant during my M.Sc. by the Brazilian National Council for
+									Scientific and
 									Technological Development (CNPq) and by the Coordination for the Improvement of
 									Higher Education Personnel CAPES).</li>
-								<li>Research Grant during my B.Sc. by the Brazilian National Council for Scientific and
-									Technological Development (CNPq).</li>
-
-
-								<li>Motion of applauses for developing the SmartHome project, during the exchange
+								<li>[2014] - Motion of applauses for developing the SmartHome project, during the
+									exchange
 									program Science Without Borders
 									in Budapest - Hungary - Câmara de Mariana/MG Brazil - (November/2014)</li>
-
-								<li>Best paper nominee: CTIC '13, BraSNAM’12</li>
-
-
-								<li>Ranked 3rd in the Brazilian Young Research Scientist Competition (XXXII Concurso de
+								<li>[2013] - Granted a scholarship in 2013 for academic excellence to study in a
+									European
+									university for 14 months.</li>
+								<li>[2013] - Best paper nominee: CTIC '13, BraSNAM’12</li>
+								<li>[2013] - Ranked 3rd in the Brazilian Young Research Scientist Competition (XXXII
+									Concurso de
 									Trabalhos de Iniciação Científica - CTIC 2013),
 									XXXIII Congresso da Sociedade
 									Brasileira de Computação (CSBC 2013)</li>
-
-								<li>Honorable Mention Article Sigam-me os Bons! Transformando robôs em pessoas
+								<li>[2012] - Honorable Mention Article Sigam-me os Bons! Transformando robôs em pessoas
 									influentes no Twitter, Brazilian
 									Workshop on Social Network Analysis and Mining (BraSNAM’12)</li>
+								<li>[2010] - Research Grant during my B.Sc. by the Brazilian National Council for
+									Scientific and
+									Technological Development (CNPq).</li>
 							</ul>
 						</section>
 
