--- a/index.html
+++ b/index.html
@@ -2603,13 +2603,13 @@
 
 								<li>[2025] - I have been invited, on behalf of the Alexander von Humboldt Foundation, to
 									represent Germany at the <a
-										href="https://www.humboldt-foundation.de/vernetzen/brazilian-german-frontiers-of-science-and-technology-symposium-3">{Brazilian-German
+										href="https://www.humboldt-foundation.de/vernetzen/brazilian-german-frontiers-of-science-and-technology-symposium-3">Brazilian-German
 										BRAGFOST Symposium</a>.</li>
 								<li>[2024] - I have been invited, on behalf of the President of the Alexander von
 									Humboldt Foundation, to represent Germany at the <a
 										href="https://www.humboldt-foundation.de/en/connect/13-indo-german-frontiers-of-engineering-symposium">Indo-German
 										INDOGFOE Symposium</a>. The event brought together
-									outstanding Indian and German scientists.}</li>
+									outstanding Indian and German scientists.</li>
 								<li>[2024] - The paper <a href="pdf/papers/gogol-liquid-staking-marble24.pdf">Liquid
 										Staking
 										Tokens in
@@ -2665,86 +2665,96 @@
 								Interviews
 							</h2>
 							<ul>
-								<li>(2025) <a href="https://www.youtube.com/watch?v=LQm1Bp27nlI">Web3 Is Broken?
+								<li>[2025] - Fairness Concerns in the Blockchain Ecosystem at the <a
+									href="https://www.mpi-sp.org">Max Planck Institute for Security and Privacy (MPI-SP)</a>, Bochum, Germany.
+							</li>
+								<li>[2024] - Fairness Concerns in the Blockchain Ecosystem at the <a
+										href="https://www.humboldt-foundation.de/en/connect/13-indo-german-frontiers-of-engineering-symposium">Indo-German
+										INDOGFOE Symposium</a>, Mumbai, India.
+								</li>
+								<li>[2025] - <a href="https://www.youtube.com/watch?v=LQm1Bp27nlI">Web3 Is Broken?
 										Airdrops, UX & Ethics Explained by Research Scientist</a>.
 									Decentralized Voices.
 								</li>
-								<li>(2025) <a href="https://www.youtube.com/watch?v=ek73DVCDnP8">The Writing is on the
+								<li>[2025] - <a href="https://www.youtube.com/watch?v=ek73DVCDnP8">The Writing is on the
 										Wall: Analyzing the Boom of Inscriptions and its Impact on EVM Blockchains</a>.
 									Ethereum Zürich. Zürich, Switzerland.
 								</li>
 
-								<li>(2024) <a href="https://www.youtube.com/watch?v=43B4AtYxWV4">Airdrops:
+								<li>[2024] - <a href="https://www.youtube.com/watch?v=43B4AtYxWV4">Airdrops:
 										Giving Money Away Is Harder Than It Seems</a>. EthCC. Brussels, Belgium.
 								</li>
-								<li>(2024) <a href="https://www.youtube.com/watch?v=Ag1LjWBOFlI">Understanding
+								<li>[2024] - <a href="https://www.youtube.com/watch?v=Ag1LjWBOFlI">Understanding
 										Blockchain Governance</a>. New York City, USA.
 								</li>
 
-								<li>(2023) <a href="https://fc23.ifca.ai/program.html">Dissecting Bitcoin and
+								<li>[2023] - <a href="https://fc23.ifca.ai/program.html">Dissecting Bitcoin and
 										Ethereum Transactions: On the Lack of Transaction Contention and Prioritization
 										Transparency in Blockchains</a>.Financial Cryptography and Data Security (FC
 									2023). Bol, Brač, Croatia.
 								</li>
-								<li>(2021) <a href="https://www.youtube.com/watch?v=B2tTLte9LGo">Selfish & Opaque
+								<li>[2021] - <a href="https://www.youtube.com/watch?v=B2tTLte9LGo">Selfish & Opaque
 										Transaction Ordering in the Bitcoin Blockchain: The
 										Case for Chain Neutrality</a>. ACM SIGCOMM Internet Measurement Conference (IMC
 									2021).
 									Virtual Event.
 								</li>
-								<li>(2020) <a href="https://youtu.be/o_KZpNPJQiE">On Blockchain Commit Times: An
+								<li>[2020] - <a href="https://youtu.be/o_KZpNPJQiE">On Blockchain Commit Times: An
 										analysis of how miners choose Bitcoin
 										transactions</a>. Second International KDD
 									Workshop on Smart Data for Blockchain and Distributed Ledger (SDBD'20).
 								</li>
-								<li>(2020) Countering Misinformation on Social Media Platforms. <a
+								<li>[2020] - Countering Misinformation on Social Media Platforms. <a
 										href="https://www.thoughtworks.com/locations/brasil/">ThoughtWorks</a>. Belo
 									Horizonte, BR.
 								</li>
-								<li>(2020) Countering Misinformation on Social Media Platforms. <a
+								<li>[2020] - Countering Misinformation on Social Media Platforms. <a
 										href="https://www.youtube.com/watch?v=TLdmoiaYvKo">SMART Data
 										Sprint 2020</a>. Lisbon, PT.
 								</li>
 
-								<li>(2019) (Mis)Information Dissemination in WhatsApp: Gathering, Analyzing and
+								<li>[2019] - (Mis)Information Dissemination in WhatsApp: Gathering, Analyzing and
 									Countermeasures. 5th International
 									Conference on Computational Social Science (IC2S2’19). Amsterdam, NL.</li>
 
-								<li>(2016) From Migration Corridors to Clusters: The Value of Google+ Data for Migration
+								<li>[2016] - From Migration Corridors to Clusters: The Value of Google+ Data for
+									Migration
 									Studies. IEEE/ACM Inter-
 									national Conference on Advances in Social Networks Analysis and Mining (ASONAM’16).
 									San Francisco, US.</li>
-								<li>(2016) Towards Sentiment Analysis for Mobile Devices. IEEE/ACM International
+								<li>[2016] - Towards Sentiment Analysis for Mobile Devices. IEEE/ACM International
 									Conference on
 									Advances in Social
 									Networks Analysis and Mining (ASONAM’16). San Francisco, US.</li>
 
-								<li>(2015) Bazinga! Caracterizando e Detectando Sarcasmo e Ironia no Twitter. Brazilian
+								<li>[2015] - Bazinga! Caracterizando e Detectando Sarcasmo e Ironia no Twitter.
+									Brazilian
 									Workshop on Social Network
 									Analysis and Mining (BraSNAM’15). Recife, BR.
 								</li>
-								<li>(2015) Brazil Around the World: Characterizing and Detecting Brazilian Emigrants
+								<li>[2015] - Brazil Around the World: Characterizing and Detecting Brazilian Emigrants
 									Using
 									Google+. Brazilian Sym-
 									posium on Multimedia and the Web (WebMedia’15). Manaus, BR.</li>
 
-								<li>(2013) Bots Sociais: Como robôs podem se tornar pessoas influentes no Twitter?
+								<li>[2013] - Bots Sociais: Como robôs podem se tornar pessoas influentes no Twitter?
 									XXXII
 									Concurso de Trabalhos de
 									Iniciação Científica (CTIC’13). Maceió, BR.</li>
 
-								<li>(2012) Sigam-me os bons! Transformando robôs em pessoas influentes no Twitter.
+								<li>[2012] - Sigam-me os bons! Transformando robôs em pessoas influentes no Twitter.
 									Brazilian
 									Workshop on Social
 									Network Analysis and Mining (BraSNAM’12). Curitiba, BR.</li>
-								<li>(2011) UGUIDE: Rede Social Móvel Aplicada a Educação. XIX Seminário de
+								<li>[2011] - UGUIDE: Rede Social Móvel Aplicada a Educação. XIX Seminário de
 									Iniciação
 									Científica da UFOP. Ouro
 									Preto, BR.</li>
-								<li>(2011) Computação Móvel: Tendências e Android. 6a Semana da Informática -
+								<li>[2011] - Computação Móvel: Tendências e Android. 6a Semana da Informática -
 									IFSULDEMINAS. Muzambinho,
 									BR.</li>
-								<li>(2010) BlueGuide - Uma Plataforma de Suporte ao Turista em Ouro Preto. I Seminário
+								<li>[2010] - BlueGuide - Uma Plataforma de Suporte ao Turista em Ouro Preto. I
+									Seminário
 									de
 									Pesquisa do PPGCC &
 									UFOP e I Fórum de Alunos e Ex-Alunos do DECOM. Ouro Preto, BR.</li>
