--- a/index.html
+++ b/index.html
@@ -2666,11 +2666,13 @@
 							</h2>
 							<ul>
 								<li>[2025] - Fairness Concerns in the Blockchain Ecosystem at the <a
-									href="https://www.mpi-sp.org">Max Planck Institute for Security and Privacy (MPI-SP)</a>, Bochum, Germany.
-							</li>
+										href="https://www.mpi-sp.org">Max Planck Institute for Security and Privacy
+										(MPI-SP)</a>, Bochum, Germany.
+								</li>
 								<li>[2024] - Fairness Concerns in the Blockchain Ecosystem at the <a
-										href="https://www.humboldt-foundation.de/en/connect/13-indo-german-frontiers-of-engineering-symposium">Indo-German
-										INDOGFOE Symposium</a>, Mumbai, India.
+										href="https://www.humboldt-foundation.de/en/connect/13-indo-german-frontiers-of-engineering-symposium">INDOGFOE,
+										Indo-German Frontiers of Engineering Symposium by Alexander von Humboldt
+										Foundation.</a>, Mumbai, India.
 								</li>
 								<li>[2025] - <a href="https://www.youtube.com/watch?v=LQm1Bp27nlI">Web3 Is Broken?
 										Airdrops, UX & Ethics Explained by Research Scientist</a>.
