Added talks to the page

--- a/index.html
+++ b/index.html
@@ -2665,14 +2665,17 @@
 								Interviews
 							</h2>
 							<ul>
+
+								<li>[2025] - The Writing is on the Wall: Analyzing the Boom of Inscriptions and its
+									Impact on EVM-compatible Blockchains. <a href="https://caaw.io/2025/">CAAW</a>,
+									Miyakojima, Japan.
+								</li>
+								<li>[2025] - A Public Dataset for the ZKsync Rollup. <a
+										href="https://caaw.io/2025/">CAAW</a>, Miyakojima, Japan.
+								</li>
 								<li>[2025] - Fairness Concerns in the Blockchain Ecosystem at the <a
 										href="https://www.mpi-sp.org">Max Planck Institute for Security and Privacy
 										(MPI-SP)</a>, Bochum, Germany.
-								</li>
-								<li>[2024] - Fairness Concerns in the Blockchain Ecosystem at the <a
-										href="https://www.humboldt-foundation.de/en/connect/13-indo-german-frontiers-of-engineering-symposium">INDOGFOE,
-										Indo-German Frontiers of Engineering Symposium by Alexander von Humboldt
-										Foundation.</a>, Mumbai, India.
 								</li>
 								<li>[2025] - <a href="https://www.youtube.com/watch?v=LQm1Bp27nlI">Web3 Is Broken?
 										Airdrops, UX & Ethics Explained by Research Scientist</a>.
@@ -2682,7 +2685,11 @@
 										Wall: Analyzing the Boom of Inscriptions and its Impact on EVM Blockchains</a>.
 									Ethereum Zürich. Zürich, Switzerland.
 								</li>
-
+								<li>[2024] - Fairness Concerns in the Blockchain Ecosystem at the <a
+										href="https://www.humboldt-foundation.de/en/connect/13-indo-german-frontiers-of-engineering-symposium">INDOGFOE,
+										Indo-German Frontiers of Engineering Symposium by Alexander von Humboldt
+										Foundation.</a>, Mumbai, India.
+								</li>
 								<li>[2024] - <a href="https://www.youtube.com/watch?v=43B4AtYxWV4">Airdrops:
 										Giving Money Away Is Harder Than It Seems</a>. EthCC. Brussels, Belgium.
 								</li>
