--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
 							<br><br>
 
 							I'm delighted to have contributed as a Program Committee member for <a
+								href="https://aftconf.github.io/aft25/committees.html">AFT25</a>, <a
 								href="https://fc25.ifca.ai/cfp.html">FC25</a>, <a
 								href="https://aftconf.github.io/aft24/committees.html">AFT24</a>, and <a
 								href="https://www2024.thewebconf.org/organization/reviewers-of-research-tracks">WWW24</a>.
