Added SBRC25 paper and its abstract

--- a/index.html
+++ b/index.html
@@ -1921,16 +1921,35 @@
 												<li class="list-inline-item"><a href="#sbrc-zkp" data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/papers/tba" target="_blank">
+												<li class="list-inline-item"><a href="pdf/papers/melo-zk-sbrc25.pdf"
+														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
-												<li class="list-inline-item"><a href="TBA" target="_blank">
+												<!-- <li class="list-inline-item"><a href="TBA" target="_blank">
 														<span class="badge badge-secondary badge-pill">BibTeX</span></a>
-												</li>
+												</li> -->
 											</ul>
 											</li>
 											<div id="sbrc-zkp" class="collapse">
-												<p class="font-italic"><b>Abstract:</b> TBA
+												<p class="font-italic"><b>Abstract:</b> Embora a transição da plataforma
+													Ethereum para Proof-of-Stake e o surgimento de sidechains ofereçam
+													soluções parciais para os problemas de escalabilidade, essas
+													abordagens apresentam trade-offs entre segurança e complexidade de
+													implementação. Para mitigar esses desafios, os ZK-Rollups surgiram
+													como soluções de escalabilidade de Layer-2, combinando computação
+													off-chain com verificação on-chain, garantindo segurança e
+													descentralização na plataforma Ethereum. Este artigo propõe uma
+													abordagem baseada em Redes de Petri Estocásticas para avaliar a
+													viabilidade dos ZK-Rollups, considerando os principais fatores que
+													impactam métricas de desempenho essenciais, como vazão e latência.
+													Também analisamos a relação entre custo e benefício, incluindo o
+													custo médio por transação e como este é impactado pelas métricas de
+													desempenho. Os resultados mostram que uma maior adoção de transações
+													na Layer-2 pode aumentar a vazão do sistema em até 20%, passando de
+													85 tps em um ambiente sem Layer-2 para 105 tps quando 90% das
+													transações seguem por esse caminho. Por outro lado, a latência pode
+													sofrer um aumento superior a 100% com a utilização de batches
+													maiores na Layer-2.
 												</p>
 											</div>
 										</ul>
