--- a/index.html
+++ b/index.html
@@ -258,11 +258,17 @@
 
 							<br><br>
 
-							I'm delighted to have contributed as a Program Committee member for <a
-								href="https://aftconf.github.io/aft25/committees.html">AFT25</a>, <a
-								href="https://fc25.ifca.ai/cfp.html">FC25</a>, <a
-								href="https://aftconf.github.io/aft24/committees.html">AFT24</a>, and <a
+							I'm delighted to have contributed as a Program Committee member for
+							<a href="https://fc26.ifca.ai/cfp.html">FC26</a>,
+							<a href="https://aftconf.github.io/aft25/committees.html">AFT25</a>,
+							<a href="https://fc25.ifca.ai/cfp.html">FC25</a>,
+							<a href="https://caaw.io/2025">CAAW25</a>,
+							<a href="https://fc25.ifca.ai/finteachin">FinTeAchIn25</a>,
+
+							<a href="https://aftconf.github.io/aft24/committees.html">AFT24</a>, and
+							<a
 								href="https://www2024.thewebconf.org/organization/reviewers-of-research-tracks">WWW24</a>.
+
 
 							<br><br>
 
@@ -2685,6 +2691,12 @@
 								Interviews
 							</h2>
 							<ul>
+
+								<li><a href="https://blockchain.salon.net.cit.tum.de/2025/">Fairness in Token
+										Delegation: Mitigating Voting Power Concentration in Decentralized
+										Autonomous Organizations</a>. 3rd
+									Edition of the TUM Blockchain&Cybersecurity Salon, Munich, Germany.
+								</li>
 
 								<li>[2025] - The Writing is on the Wall: Analyzing the Boom of Inscriptions and its
 									Impact on EVM-compatible Blockchains. <a href="https://caaw.io/2025/">CAAW</a>,
