--- a/index.html
+++ b/index.html
@@ -2692,7 +2692,7 @@
 							</h2>
 							<ul>
 
-								<li><a href="https://blockchain.salon.net.cit.tum.de/2025/">Fairness in Token
+								<li>[2025] - <a href="https://blockchain.salon.net.cit.tum.de/2025/">Fairness in Token
 										Delegation: Mitigating Voting Power Concentration in Decentralized
 										Autonomous Organizations</a>. 3rd
 									Edition of the TUM Blockchain&Cybersecurity Salon, Munich, Germany.
