--- a/index.html
+++ b/index.html
@@ -2722,6 +2722,10 @@
 										Indo-German Frontiers of Engineering Symposium by Alexander von Humboldt
 										Foundation.</a>, Mumbai, India.
 								</li>
+								<li>[2024] - <a href="https://johnnatan.notion.site/13d97fbddeec801cb572fed3492992db">Blockchain Research: Where society becomes decentralized</a> at the <a
+										href="https://www.mpi-sws.org">Max Planck Institute for Software Systems
+										(MPI-SWS)</a>, Kaiserslautern, Germany.
+								</li>
 								<li>[2024] - <a href="https://www.youtube.com/watch?v=43B4AtYxWV4">Airdrops:
 										Giving Money Away Is Harder Than It Seems</a>. EthCC. Brussels, Belgium.
 								</li>
