Added link to my talk on youtube

--- a/index.html
+++ b/index.html
@@ -2691,11 +2691,10 @@
 								Interviews
 							</h2>
 							<ul>
-
-								<li>[2025] - <a href="https://blockchain.salon.net.cit.tum.de/2025/">Fairness in Token
+								<li>[2025] - <a href="https://www.youtube.com/watch?v=evfTos8WXDY">Fairness in Token
 										Delegation: Mitigating Voting Power Concentration in Decentralized
-										Autonomous Organizations</a>. 3rd
-									Edition of the TUM Blockchain&Cybersecurity Salon, Munich, Germany.
+										Autonomous Organizations</a>. <a href="https://blockchain.salon.net.cit.tum.de/2025">3rd
+									Edition of the TUM Blockchain&Cybersecurity Salon</a>, Munich, Germany.
 								</li>
 
 								<li>[2025] - The Writing is on the Wall: Analyzing the Boom of Inscriptions and its
