Updated papers' abstract

--- a/index.html
+++ b/index.html
@@ -331,25 +331,25 @@
 											</ul>
 
 											<div id="arxiv-airdrop" class="collapse">
-												<p class="font-italic"><b>Abstract:</b> Airdrops are used by blockchain
-													applications and platforms to attract an initial user base, and to
-													grow the user base over time. In the case of many airdrops, tokens
-													are distributed to select users as a "reward" for interacting with
-													the underlying platform, with a long-term goal of creating a loyal
-													community that will generate genuine economic activity well after
-													the airdrop has been completed. Although airdrops are widely used by
-													the blockchain industry, a proper understanding of the factors
-													contributing to an airdrop's success is generally lacking. In this
-													work, we outline the design space for airdrops, and specify a
-													reasonable list of outcomes that an airdrop should ideally result
-													in. We then analyze on-chain data from several larger-scale airdrops
-													to empirically evaluate the success of previous airdrops, with
-													respect to our desiderata. In our analysis, we demonstrate that
-													airdrop farmers frequently dispose of the lion's share of airdrops
-													proceeds via exchanges. Our analysis is followed by an overview of
-													common pitfalls that common airdrop designs lend themselves to,
-													which are then used to suggest concrete guidelines for better
-													airdrops.
+												<p class="font-italic"><b>Abstract:</b> Airdrops are a popular mechanism
+													used by blockchain protocols to bootstrap communities, reward early
+													adopters, and decentralize token distribution. Despite their
+													widespread adoption, the effectiveness of airdrops in achieving
+													long-term user engagement and ecosystem growth remains poorly
+													understood. In this paper, we present the first comprehensive
+													empirical study of nine major airdrops across Ethereum and Layer-2
+													ecosystems. Our analysis reveals that a substantial share of
+													tokens--up to 66% in some cases--are rapidly sold, often in
+													recipients' first post-claim transaction. We show that this behavior
+													is largely driven by "airdrop farmers," who strategically optimize
+													eligibility criteria to extract value without contributing
+													meaningfully to the ecosystem. We complement our quantitative
+													findings with a case study of the Arbitrum airdrop, illustrating how
+													short-term activity spikes fail to translate into sustained user
+													involvement. Based on these results, we discuss common design
+													pitfalls--such as Sybil vulnerability, poor incentive alignment, and
+													governance token misuse--and propose actionable guidelines for
+													designing more effective airdrop strategies.
 
 												</p>
 											</div>
@@ -386,32 +386,23 @@
 											</ul>
 
 											<div id="arxiv-daos" class="collapse">
-												<p class="font-italic"><b>Abstract:</b> Smart contracts are contractual
-													agreements between participants of a blockchain, who cannot
-													implicitly trust one another. They are software programs that run on
-													top of a blockchain, and we may need to change them from time to
-													time (e.g., to fix bugs or address new use cases). Governance
-													protocols define the means for amending or changing these smart
-													contracts without any centralized authority. They distribute instead
-													the decision-making power to every user of the smart contract: Users
-													vote on accepting or rejecting every change. The focus of this work
-													is to evaluate whether, how, and to what extent these protocols
-													ensure decentralized governance, the fundamental tenet of
-													blockchains, in practice. This evaluation is crucial as smart
-													contracts continue to transform our key, traditional, centralized
-													institutions, particularly banking and finance.
-													In this work, we review and characterize decentralized governance in
-													practice, using Compound -- one of the widely used governance
-													protocols -- as a case study. We reveal a high concentration of
-													voting power in Compound: 10 voters hold together 57.86% of the
-													voting power. Although proposals to change or amend the protocol
-													(or, essentially, the application they support) receive, on average,
-													a substantial number of votes (i.e., 89.39%) in favor, they require
-													fewer than three voters to obtain 50% or more votes. We show that
-													voting on Compound governance proposals can be unfairly expensive
-													for small token holders, and also discover voting coalitions that
-													can further marginalize these users. We plan on publishing our
-													scripts and data set on GitHub to support reproducible research.
+												<p class="font-italic"><b>Abstract:</b> Decentralized Autonomous
+													Organizations (DAOs) have emerged as a novel governance mechanism in
+													blockchain ecosystems, particularly within Decentralized Finance
+													(DeFi). By enabling token holders to propose and vote on protocol
+													changes, these systems promise transparent and equitable
+													decision-making without centralized control. In this paper, we
+													present an in-depth empirical study of the governance protocols of
+													Compound and Uniswap, two of the most widely used DAOs in DeFi.
+													Analyzing over 370 governance proposals and millions of on-chain
+													events from their inception until August 2024, we uncover
+													significant centralization of voting power: as few as 3--5 voters
+													were sufficient to sway the majority of proposals. We also find that
+													the cost of voting disproportionately burdens smaller token holders,
+													and that strategic voting behaviors, such as delayed participation
+													and coalition formation, further distort governance outcomes. Our
+													findings suggest that despite their decentralized ideals, current
+													DAO governance mechanisms fall short in practice.
 
 												</p>
 											</div>
@@ -2693,8 +2684,9 @@
 							<ul>
 								<li>[2025] - <a href="https://www.youtube.com/watch?v=evfTos8WXDY">Fairness in Token
 										Delegation: Mitigating Voting Power Concentration in Decentralized
-										Autonomous Organizations</a>. <a href="https://blockchain.salon.net.cit.tum.de/2025">3rd
-									Edition of the TUM Blockchain&Cybersecurity Salon</a>, Munich, Germany.
+										Autonomous Organizations</a>. <a
+										href="https://blockchain.salon.net.cit.tum.de/2025">3rd
+										Edition of the TUM Blockchain&Cybersecurity Salon</a>, Munich, Germany.
 								</li>
 
 								<li>[2025] - The Writing is on the Wall: Analyzing the Boom of Inscriptions and its
@@ -2721,7 +2713,9 @@
 										Indo-German Frontiers of Engineering Symposium by Alexander von Humboldt
 										Foundation.</a>, Mumbai, India.
 								</li>
-								<li>[2024] - <a href="https://johnnatan.notion.site/13d97fbddeec801cb572fed3492992db">Blockchain Research: Where society becomes decentralized</a> at the <a
+								<li>[2024] - <a
+										href="https://johnnatan.notion.site/13d97fbddeec801cb572fed3492992db">Blockchain
+										Research: Where society becomes decentralized</a> at the <a
 										href="https://www.mpi-sws.org">Max Planck Institute for Software Systems
 										(MPI-SWS)</a>, Kaiserslautern, Germany.
 								</li>
