--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
 												<li class="list-inline-item"><a
-														href="https://drive.google.com/drive/u/2/folders/1lm0UNtSLbnX0AtyRFh8Ol_6eDKYcnyl1"
+														href="https://github.com/johnnatan-messias/research-proj-airdrop"
 														target="_blank">
 														<span class="badge badge-warning badge-pill">Data</span>
 													</a></li>
@@ -378,6 +378,11 @@
 														href="https://arxiv.org/pdf/2305.17655.pdf" target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
+												<li class="list-inline-item"><a
+														href="https://github.com/johnnatan-messias/research-proj-governance"
+														target="_blank">
+														<span class="badge badge-warning badge-pill">Data</span>
+													</a></li>
 												<li class="list-inline-item"><a
 														href="https://www.youtube.com/watch?v=Ag1LjWBOFlI"
 														target="_blank">
